src/test/ui/regions/regions-proc-bound-capture.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-proc-bound-capture.rs:9:5
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   - let's call the lifetime of this reference `'1`
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move || { *x })
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'static`

error: aborting due to previous error

